istio-cel/restrict-virtual-service-wildcard/restrict-virtual-service-wildcard.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-virtual-service-wildcard
  annotations:
    policies.kyverno.io/title: Restrict Virtual Service Host with Wildcards in CEL expressions
    policies.kyverno.io/category: Istio in CEL expressions
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.11.0
    policies.kyverno.io/minversion: 1.11.0
    kyverno.io/kubernetes-version: "1.26-1.27"
    policies.kyverno.io/subject: VirtualService
    policies.kyverno.io/description: >-
      Virtual Services optionally accept a wildcard as an alternative
      to precise matching. In some cases, this may be too permissive as it
      would direct unintended traffic to the given resource. This
      policy enforces that any Virtual Service host does not contain a wildcard
      character and allows for more governance when a single mesh deployment 
      model is used.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: block-virtual-service-wildcard
      match:
        any:
        - resources:
            kinds:
              - VirtualService
      validate:
        cel:
          expressions: 
            - expression: "!has(object.spec.hosts) || !object.spec.hosts.exists(host, host.contains('*'))"
              message: "Wildcards are not permitted as hosts."
