istio-cel/restrict-virtual-service-wildcard/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: restrict-virtual-service-wildcard
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../restrict-virtual-service-wildcard.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: restrict-virtual-service-wildcard
          spec:
            validationFailureAction: Enforce
    - assert:
        file: policy-ready.yaml
    - assert:
        file: crd-assert.yaml
  - name: step-02
    try:
    - apply:
        file: good-vs.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-vs.yaml
